--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713438902000-->
-[俄罗斯“非洲军团”布局非洲 - 聚焦非洲](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%81%9A%E7%84%A6%E9%9D%9E%E6%B4%B2/20240418-%E4%BF%84%E7%BD%97%E6%96%AF-%E9%9D%9E%E6%B4%B2%E5%86%9B%E5%9B%A2-%E5%B8%83%E5%B1%80%E9%9D%9E%E6%B4%B2)
+<!--1713444302000-->
+[拜登昨晚大批中国钢铁排外与作弊 发言人林剑今早冷问是否说美国自己](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A-%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1)
 ------
 
-<div>18/04/2024 - 12:46</div><img src="https://s.rfi.fr/media/display/785e392c-0d70-11ea-b7ec-005056bfe576/w:1280/p:16x9/Carte-Libye-Niger-Burkina-410_0.png"><p><strong>一周前，一艘俄罗斯货船“机械马卡林号”（Mekhanic Makarin）经突尼斯苏塞港后停靠在利比亚东部。4月8日，两艘舰艇“伊万·格林”号和“亚历山大·奥特拉科夫斯基”号从俄罗斯位于叙利亚的塔尔图斯海军基地出发，停靠在利比亚托布鲁克。这两艘军舰自俄罗斯入侵乌克兰以来一直在黑海服役，负责为俄罗斯军队提供后勤装备和火炮。4月12日，伊尔-76运输机连夜将俄罗斯非洲军团士兵运送到尼日尔，该国与利比亚接壤。 在尼日尔发生军事政变前夕，同型号飞机也曾出现在布基纳法索，运送俄罗斯军人，教官，后勤人员。所有这些分散的有时彼此相距一千公里的部署，都证明莫斯科正在加强其在利比亚东部和中部的存在，以建立一条贯通萨赫勒地区的线路并实现其在利比亚建立军事基地的梦想。                    </strong></p><div><p>这是近日发表在法国《观点》杂志非洲版上的一篇题为《俄罗斯在利比亚安家》的长文的开篇，这篇关注俄罗斯非洲军团动向的文章接下来指出，对于一个发迹于西伯利亚大草原的发展中国家，选择利比亚展现出不同寻常的地理和地缘政治灵活性。利比亚这个国土面积三倍于法国的国家，坐拥1770公里的地中海海岸，隔海与意大利和希腊相望，它同时还与埃及、苏丹、乍得，尼日尔（萨赫勒）、突尼斯和阿尔及利亚（马格里布）接壤。这个国家面临着四股热点问题的挑战：圣战主义、走私，非法移民及正在肆虐苏丹的军事冲突……利比亚对于“非洲军队”来说是一个绝佳的机会。自2011年利比亚爆发革命推翻卡扎菲四十年独裁统治以来，在北约国家的军事干预及包括土耳其、阿联酋、卡塔尔、俄罗斯多国军事介入下，利比亚一直处于南北分裂状态，该国也是通往撒哈拉和萨赫勒地区的门户。</p><p>所谓俄罗斯“非洲军队”是指克里姆林宫的新军队，前身是已故普里戈金的瓦格纳雇佣军。“非洲军团”名称来自二次大战时驰骋北非的一支德国远征军，帅将为德国陆军元帅隆美尔。</p><p>2024年，整个萨赫勒地区危机四伏，自第二次世界大战以来，撒哈拉沙漠从未经历过如此的惊心动魄。马里、布基纳法索、尼日尔三国军头先后发动军事政变，轻易将曾经的宗主国法国的军事存在驱逐出境，同时投入克里姆林宫的怀抱。4月10号，一架装饰着俄罗斯国旗的白色宽体飞机降落在尼亚美机场，在飞机引擎震耳欲聋的噪音中，俄新社的记者对首批俄罗斯非洲军团士兵抵达尼日尔进行了评论，他说，“这意味着俄罗斯正在重返非洲”。事实上，莫斯科已经出现在从利比亚到苏丹、从萨赫勒到中非共和国的各个地区。继马里和布基纳法索之后，第三个由叛变军人领导的萨赫勒国家进一步成为西非亲俄阵营的成员。</p><p>尼日尔是克里姆林宫的一张王牌。这个人口两千五百万的国家位于世界最不稳定地区，是世界上最贫穷的国家之一，也是非洲向欧洲输送非法移民的集散地。尼日尔军头推翻民选总统巴祖姆后，这个曾经一直是萨赫勒地区欧美可靠盟友的国家，开始执政，先切断与法国的联系，关闭大使馆，要求一千五百名法国驻军离境，随后又撕毁与美国的安全协议，驱逐美国驻军，拒绝欧盟在阿加德兹执行其移民任务。走私不再被定为犯罪，它已被新颁布的法令合法化。去年12月，俄罗斯国防部副部长埃夫库罗夫 (Younous-bek Evkourov) 上将首次访问尼亚美，并与尼日尔签署了“加强安全合作”的秘密防务“协议”。 一个半月后，尼日尔过渡政府首脑扎伊纳率领一个大型部长级代表团访问了俄罗斯。2023年9月，在俄罗斯支持下，萨赫勒国家联盟成立，成员国马里，布基纳法索和尼日尔同时宣布脱离西非国家经济共同体。自此，尼日尔，这个萨赫勒地区曾经的欧美盟友彻底倒向俄罗斯。</p><p>法国国防部国际关系与战略总局下属军事学校战略研究所(IRSEM)俄罗斯影响力专家奥迪内特（Maxime Audinet）表示：“非洲军团抵达尼日尔标志着俄罗斯在该地区的持续扩张，并得到萨赫勒国家联盟（AES）制度化支持，莫斯科正通过这个新晋联盟施加影响力”。他说：“我们正在见证后普里戈金时代俄罗斯在萨赫勒地区的存在，这是由俄罗斯军事情报部门（GRU）和国防部精心策划的，他们正试图重新控制瓦格纳在非洲的遗产。”</p><p>俄罗斯正在非洲陷入危机的国家一步步确立自己的地位，与那些向克里姆林宫寻求安全保护的政变军头同谋，强加反西方议程。然而，达喀尔安全研究院高级研究员吉比·索乌表示：“非洲伙伴很快会明白，与俄罗斯的这种关系不会让他们如愿以偿，特别是在经济发展方面，因为中国、欧盟、美国以及现在的印度和土耳其在经济贸易上远远超过莫斯科。”</p><p>根据易卜拉欣基金会2023年8月发布的分析报告；俄罗斯仅占非洲出口总额的1.8%，而欧盟为26.7%，中国为19.9%，印度为5.6%。俄非贸易以原材料出口为主，这些原材料对非洲大陆的经济几乎没有附加值。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>周四，中国今天指责美国总统拜登虚伪。美国总统拜登昨天在美国匹兹堡发表讲话指责中国当局在全球“钢铁”贸易中“排外”和“作弊”。 中国外交部发言人林剑今天回应称，“我想问拜登，你说的是中国还是美国？”        </strong></p><div><p>美国总统拜登昨天宣布，他希望将来自中国的钢铁和铝的关税提高两倍。法新社称，这是拜登试图吸引美国工人阶级的政治选票。拜登开始一个星期的在宾夕法尼亚州竞选宣传活动。</p><p>这位民主党人指责北京在全球钢铁贸易中“作弊”，损害了美国制造商及其工人的利益，美国制造商及其雇员是11月总统选举的关键选民，除非有任何意外，他将在这次选举中面对他的竞争对手特朗普。</p><p>拜登指控中国说，“他们仇外。” 这位民主党人感叹中国钢铁企业“不必担心盈利问题，因为中国政府对它们提供大量补贴”。拜登称，“他们不是在竞争，而是在作弊，我们已经在美国看到了这种损害。”</p><p>拜登自称是美国工人最好盟友。拜登说，“我不是在寻求与中国对抗，我想要竞争，而是公平竞争。”</p><p>拜登还进一步澄清，他保证不会与北京发生“贸易战”。</p><p>美国工会和雇主一致对这些保护主义措施表示欢迎。美国钢铁工人联合会（USW）感谢他为捍卫美国的钢铁而采取的“积极”行动。该工会上个月宣布支持民主党参加11月大选，指责拜登的对手特朗普“剥夺工人权利”，尽管特朗普也自称是美国制造业复兴的捍卫者。</p><p>法新社说，自 1990 年以来，宾夕法尼亚州已经失去了超过 40% 的制造业工作岗位，宾夕法尼亚州是美国工业的历史中心，也是可能在 11 月左右选举结果的六个关键州之一。</p><p>总部位于该州的美国钢铁巨头美国钢铁公司表示“赞赏”乔·拜登的声明，该行业的雇主组织也持这一立场。 这位民主党人周三还重申反对日本新日铁公司收购美国公司。</p><p>周二的前一天，拜登从家乡斯克兰顿呼吁为最富有的人增加税收，这与特朗普竞选立场形成鲜明对比。 周三，特朗普陷入非常忙碌，因为他在纽约忙碌的应对审判。</p><p>民主党目前的竞选活动，主要关注宾夕法尼亚州及其白人工人选民。</p><p>特朗普谴责拜登对他的不实指控。特朗普长期以来一直为增加对中国的关税辩护，他的竞选团队周三谴责了民主党及时改变主意。共和党指责“拜登的整个职业生涯都在背叛美国工人，”共和党发言人在一份声明中写道，拜登周三宣布的措施“太软弱，而且来得太晚”。</p><p>拜登周三还呼吁其贸易代表（USTR）“考虑将目前的关税提高两倍”，对进口到美国的部分钢铁和中国铝征收平均7.5%的关税。拜登政府还宣布对中国在“造船、航运和物流领域”的措施进行调查。</p><p>据法新社称，北京迅速谴责“不实指控”。中国商务部称，美国的调查“错误地将正常的贸易和投资活动解释为损害国家安全和美国企业的利益”。 美国“指责中国应对其自身的工业问题负责”。</p><p>尽管两国重新启动了对话，但美国的声明是在与中国激烈竞争的背景下做出的。当被问及这些声明是否会危及他试图与中国国家主席习近平维持的关系时，拜登回答说“不会”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWki.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%258B%259C%25E7%2599%25BB%25E6%2598%25A8%25E6%2599%259A%25E5%25A4%25A7%25E6%2589%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258E%2592%25E5%25A4%2596%25E4%25B8%258E%25E4%25BD%259C%25E5%25BC%258A-%25E5%258F%2591%25E8%25A8%2580%25E4%25BA%25BA%25E6%259E%2597%25E5%2589%2591%25E4%25BB%258A%25E6%2597%25A9%25E5%2586%25B7%25E9%2597%25AE%25E6%2598%25AF%25E5%2590%25A6%25E8%25AF%25B4%25E7%25BE%258E%25E5%259B%25BD%25E8%2587%25AA%25E5%25B7%25B1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWki.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
