--- a/articles/rfi/999966.md
+++ b/articles/rfi/999966.md
@@ -1,5 +1,5 @@
-<!--1713431702000-->
-[韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9)
+<!--1713438901000-->
+[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
 ------
 
-<div>18/04/2024 - 08:48</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助，这是韩国经济副总理兼企划财政部长官崔相穆4月17日在华盛顿表示的。        </strong></p><div><p>韩联社报道，崔相穆当天在华盛顿出席第五次援乌圆桌会议。他介绍，韩国正在落实总统尹锡悦去年9月在二十国集团（G20）峰会上发布的援乌项目。</p><p>韩方还将为世界银行（WB）和欧洲复兴开发银行（EBRD）的援乌基金各出资5000万美元。韩国政府将从韩国对外经济合作基金（EDCF）中划拨21亿美元资金，对乌克兰提供援助。其中包括韩乌领导人去年7月举行会谈时韩方承诺的1亿美元。</p><p>今年早些时候，美国国务院官员公开表态“希望韩国扩大对乌援助”，于是韩方重申对乌克兰仅提供非杀伤性武器援助的既有立场，并向乌克兰援助了扫雷装备、急救车、防护服等防御军事装备。</p><p>韩国总统办公室2月15日表示，韩国正式加入由七国集团（G7）主导成立的负责援助乌克兰重建工作的多机构捐助者协调小组（MDCP）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWjV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E9%259F%25A9%25E5%259B%25AF%25E5%25B0%2586%25E5%259C%25A8%25E4%25BB%258A%25E5%25B9%25B4%25E5%2586%2585%25E6%258B%25A8%25E6%25AC%25BE2%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E5%2590%2591%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%258F%2590%25E4%25BE%259B%25E4%25BA%25BA%25E9%2581%2593%25E4%25B8%25BB%25E4%25B9%2589%25E6%258F%25B4%25E5%258A%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWjV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
