--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713431701000-->
-[台湾环保组织谈PFAS污染研究及对策 - 环境与发展](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20240418-%E5%8F%B0%E6%B9%BE%E7%8E%AF%E4%BF%9D%E7%BB%84%E7%BB%87%E8%B0%88pfas%E6%B1%A1%E6%9F%93%E7%A0%94%E7%A9%B6%E5%8F%8A%E5%AF%B9%E7%AD%96)
+<!--1713438901000-->
+[所罗门可能的新总理称上台翌日即废止与中国协议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>18/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/1ec5bb4c-fccc-11ee-9768-005056a90284/w:1280/p:16x9/Screenshot%202024-04-17%20at%2017-05-27%20%E5%BE%9E%E9%9B%B6%E9%96%8B%E5%A7%8B%E8%AA%8D%E8%AD%98PFAS.png"><p><strong>法广在近期的节目中向大家介绍了美国以及欧洲国家的卫生机构对化学污染物PFAS的环境以及人体健康影响的评估，同时也向大家介绍了西方各国针对PFAS污染所采取的限制以及检测措施。鉴于PFAS污染无处不在，全世界各国的水土以及空气都受到了PFAS污染，那么，作为信息开放的台湾，台湾的PFAS污染状况如何？我们知道，台湾的半导体行业已经成为台湾的镇国之宝，而半导体产业链的各大环节都离不开带有PFAS的产品，台湾半导体行业对此有何对策？台湾政府针对PFAS污染又出台了哪些措施？                    </strong></p><div><p>就以上问题，法广电话采访了关注PFAS污染多年的<a href="https://www.taiwanwatch.org.tw/node/1520" target="_blank">看守台湾组织</a>的研究员林弈均先生 :</p><p><strong>法广：</strong>林先生，您好，非常感谢您接受法广的采访！首先请您介绍一下看守台湾是一个什么样的组织。</p><p><strong>林弈均：</strong>我们的协会算成立于1999年，是一个比较老的环保组织，我们主要关注台湾的生态与环境议题，我们的目标是“永续台湾”。我们一半以上的工作主要是翻译一些国外的先进的研究文章，将它们介绍给台湾的民众。其他关注的主要的议题就是台湾的废弃物，包括一些带有毒性的废弃物，一些工厂和企业对外排放的废弃物。</p><p><strong>法广：</strong>现在国际上都十分关注这些被叫做永久污染物的化学物质PFAS，你们关注这一话题已经很长时间，能否向大家介绍一下台湾的PFAS的污染现状以及政府采取的一些应对措施？</p><p><strong>林弈均：</strong>老实说，台湾政府还没有对这些污染物进行彻底的检查，政府定期调查的是国际上都调查的五种PFAS，也就是PFOA、PFOS、LPOS、POSF＋PFHxS，但是，没有去做进一步的工作。不过，台湾的学者很早就对这些污染物对人体健康进行了研究，其中最具有影响的就是台灣公共衛生學會理事長、台大環境與職業健康科學研究所特聘教授陳保中先生，他从2011年就发表论文，针对PFOA与PFOS在孕妇身体中的浓度对新生儿的影响，例如造成新生儿发育缓慢等等方面的缺陷，他的研究证明这两者之间的关联是十分密切的。去年，我们还同菲律宾的一位教授相合作，这位教授对菲律宾的一些在PFAS浓度高的工厂工作的妇女进行了调查，结果发现这些妇女的乳腺癌的发病率高于其他妇女。所以，学术界对PFAS引发癌症方面的研究已经有许多。另外。在PFAS对环境的污染方面，我们也已经有环境工程的学者在2009年和2014年对水中的鱼类进行了检测，结果发现受到工业园区污水污染的水中的鱼身上的PFAS的含量比其他鱼的PFAS浓度高出两百倍。</p><p><strong>法广：</strong>也就是说PFAS污染对环境以及人体健康造成的危害在台湾学术界已经成为共识，那么，台湾PFAS的污染的源头是什么？</p><p><strong>林弈均：</strong>其实，据我们了解，台湾基本上没有生产PFAS的厂家，总共只有一家生产PFAS的工厂，所以，台湾的PFAS污染主要来自进口的产品，或者是进口的原材料，用于半导体或者别的产业。</p><p><strong>法广：</strong>您知道半导体产业为什么使用PFAS以及使用的量是多少吗？</p><p><strong>林弈均：</strong>其实我们在台湾也很难获得这方面的信息，因为政府与企业都以工业机密为由拒绝回答，这也是我们为什么很难获得那家生产PFAS的企业的信息。根据我们从国外的有关半导体产业的介绍，我们了解到半导体制造业在生产电路板时就使用PFAS产品，因为它可以在非常薄的状况下发挥阻热，阻湿等功能，甚至还可以阻电，可以当作隔离层，而且成本 还十分低廉。</p><p><strong>法广：</strong>那么，台湾政府是否出台一些措施来应对PFAS污染，台湾政府也同中国政府一样签署了《关于持久性有机污染物的斯德哥尔摩公约》，那具体有些什么效果？</p><p><strong>林弈均：</strong>是的，台湾政府就是跟着公约走，台湾政府确实跟进得很快，但是，公约虽然具有强制性，但是，它必须符合一百多个国家的利益，所以，他的节奏是十分缓慢的，倘若台湾仅仅跟着公约走，那么，我们环保组织认为是远远不够的，尤其是我们看到欧美国家都在出台更加严厉的措施。</p><p><strong>法广：</strong>那台湾政府是否也有这方面的计划，或者作为环保组织你们期待政府能够立即采取哪些措施？</p><p><strong>林弈均：</strong>我们目前正在与政府交涉，首先要求政府必须禁止所有PFAS产品，而不是一个一个地去禁止，因为PFAS总共有超过一万多个产品，被用于商业用途的超过四千种，倘若一个个地禁止的话，那么，台湾的整个空气，土地与水早就被严重污染了。这也是为什么所有国际的环保组织都要求全面禁止PFAS的原因所在。另外，我们的第二个诉求就是禁止使用所有非必要的PFAS产品，我们最近同一个国际组织共同做了一个食品包装物上的PFAS检测，检测的结果八个样本中有七个都有PFAS，这些PFAS很可能通过食物进入人体，而这些PFAS的使用其实并没有必要，不使用PFAS至多不过是麻烦一些，而且，有些物品的替代物早已被找到。所以我们要求政府必须立即禁止在食品包装中使用PFAS。所以，以上就是在短期内我们对政府提出的两个诉求。</p><p>非常感谢看守台湾组织的研究员林弈均先生接受法广的专访！</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>18/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/de2f9c94-4be4-11ee-8348-005056bfb2b6/w:1280/p:16x9/Le%20port%20international%20d%27Honiara%2C%20capitale%20des%20%C3%AEles%20Salomon.JPG"><p><strong>所罗门群岛总理一职的主要候选人之一今天承诺，在可能影响该国选举的第二天，如果他上台，就废除这个太平洋小国与中国签订的地区安全协定。法新社说，中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。        </strong></p><div><p>所罗门群岛总理一职的主要候选人之一，彼得·凯尼洛雷亚在马莱塔岛的村庄告诉法新社，“如果我们掌权，我们将废除与中国的安全条约。我们认为这个条约对所罗门群岛没有好处。”</p><p>周三所罗门群岛选举后，计票工作正在进行，该选举必须更新议会并选举总理，这一过程可能需要一些时间。</p><p>在这个拥有约 72 万居民、遍布数百个火山岛屿和环礁的小国举行的这次选举正受到密切关注，因为它对太平洋安全局势会有预期影响。</p><p>所罗门群岛现在的总理玛纳西·索加瓦雷 (Manasseh Sogavare) 领导所罗门群岛进入中国的轨道，并于 2022 年与北京签署了安全协议。尽管该协议的细节仍不清楚，但美国和澳大利亚担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的国际规则。</p><p>即将卸任的领导人承诺，如果再次当选，将加强与中国的关系，但他的反对者担心北京对所罗门群岛的影响，并主张与澳大利亚或美国等传统伙伴重建关系。</p><p>凯尼洛雷亚说，“我们没有天敌。” 他并对所罗门群岛已成为世界上两个最大的军事和经济大国——中国和美国——之间的争论焦点表示遗憾。他指出，“这让我们因错误的原因而臭名远扬。我们真的不需要在这里挑起不必要的紧张局势。”</p><p>据法新社今天报道称，在由身穿制服的斐济士兵和澳大利亚警察组成的国际小组的监视下，选票被卡车运送到首都霍尼亚拉一个高度保护的计票中心，这是投票面临压力的迹象。</p><p>中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。美国大使安·玛丽·亚斯蒂休克称这些谣言是“公然的欺骗”。 她在一份声明中表示，“我们强烈反驳知名宣传机构关于美国国际开发署和美国政府试图影响选举的指控”。</p><p>卸任总理索加瓦雷的主要竞争对手是前联合国律师彼得·凯尼洛雷亚、人权活动家马修·韦尔和前总理经济学家戈登·达西·利洛。</p><p>然而，所罗门群岛可能要几周时间才认识他们的新总理。</p><p>选民并不直接选择他们的领导人。 他们选出代表，进行闭门谈判，组成联盟并选出领导人，这一过程可能会持续数周。</p><p>据负责选举的官员贾斯珀·阿尼西 (Jasper Anisi) 称，投票后第二天，所罗门局势平静。他说，“一切都很和平。”</p><p>所罗门之前的选举经常导致暴力。</p><p>2000年，总理巴特·乌卢法阿鲁在被心怀不满的枪手绑架后被迫辞职。</p><p>2006年，国际维和部队被部署平息选举后的暴力事件，总理斯奈德·里尼在仅仅八天后就被赶下台。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
