--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713390303000-->
-[印度计划如何减低对中国太阳能技术设备的依赖？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240417-%E5%8D%B0%E5%BA%A6%E8%AE%A1%E5%88%92%E5%A6%82%E4%BD%95%E5%87%8F%E4%BD%8E%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%A4%AA%E9%98%B3%E8%83%BD%E6%8A%80%E6%9C%AF%E8%AE%BE%E5%A4%87%E7%9A%84%E4%BE%9D%E8%B5%96)
+<!--1713393902000-->
+[阿联酋遭遇最大降雨   机场大乱   学校停课一周](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8-%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1-%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8)
 ------
 
-<div>17/04/2024 - 16:52</div><img src="https://s.rfi.fr/media/display/824afafe-0f93-11ea-b5cd-005056a99247/w:1280/p:16x9/2014-09-17T145549Z_1102159084_GM1EA9H1RKC01_RTRMADP_3_CHINA-SOUTHASIA-INDIA_0.JPG"><p><strong>印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗                    </strong></p><div><p>印度将于明天周五启动为时六周的立法选举，印度各地九亿多选民将先后于七个投票日投票，之所以要错开投票时间，是为了便于安保人员守护全国各地的投票站，投票结果将于六月四日公布。选前的民调显示，印度总理莫迪所在的人民党（Bharatiya Janata Party）有望获得第三次胜利，莫迪所面对的最大的对手是以国大党（Indian National Congress）为首的政党联盟。</p><p>这个由20多个政党组成的反对党联盟的名称叫做“印度国家发展包容性联盟”（Indian National Developmental Inclusive Alliance），此次选举的关键议题除了反对党联盟所提出的要避免印度越来越“滑向专制”之外，就是年轻人的就业等经济议题。而在经济议题中，中印合作尤其是在可再生能源领域的合作议题举足轻重，因为这不仅是印度这一碳排放大国能源转型的一大关键性的一步，而且也涉及印度如何处理与他在地缘政治舞台上的一大对手中国之间的双边关系。</p><p>众所周知，早在2015年巴黎气候峰会期间，印度政府就做出了在2030年之前实现500吉瓦的可再生能源的承诺，2018年，43个国家的政府首脑和部长在印度首都新德里出席了国际太阳能联盟的成立大会，该联盟的理念是在共享价值观、经验和资源的基础上为清洁能源创造一个共同的市场。然而，尽管印度的自然日照条件远远领先于其他国家，到2021年年底印度的光伏发电累计装机容量仅为60.4GW，远远低于中国的308吉瓦，位居中国，欧盟，美国以及日本之后。而且，印度的太阳能设备组件主要依赖进口，而且其中超过50%来自中国。</p><p>那么，印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗？</p><p>就以上问题，法广电话采访了印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授。</p><p>谢刚教授就印度针对来自中国的太阳能部件抬高关税的策略评论说：</p><p>“中国从2021年起向印度出口的硅胶，电池片，接线盒等太阳能部件占印度总进口量的60%至70%，但是，由于地缘政治的影响，印度对中印边界2020年发生的冲突记忆犹新，因此，新德里的决策首先是出于地缘政治方面的考量；其次，我们也看到一些贸易上的风险，尤其是在新冠疫情期间，对印度的进口曾经产生巨大影响，这是印度政府限制太阳能电池板进口的另一大考量。鉴于以上原因，印度期待发展自身的太阳能产业，当然，新产业的开发需要时间，不可能一蹴而就，在此期间，印度对中国的太阳能工业依然十分依赖。此外，另一个原因是中国在2003年对日本实施的稀土禁运，以及美国对中国的芯片封锁等等，这一切都使印度意识到倘若有朝一日，中国也对印度实施太阳能设备禁运，这将对印度全国产生的灾难性的影响，因此，印度政府鼓励印度国内的企业例如阿达尼集团（Adani Solar）等开发自己的新能源产业，阿达尼在印度各地安置了许多太阳能设备，另外，印度的石油能源集团也开始发展产业多元化，投资开发太阳能工厂。在发展本国太阳能产业的同时，印度还着手寻找中国之外的新的太阳能供应国，比如说法国，法国的道达尔集团在南非开设了太阳能电池板生产工厂，因为我们知道，巴黎气候协定制定了一个能源过渡的时间表与融资途径，联合国第26届气候峰会提出了一个协助南非走出煤炭的能源过渡计划，为南非的新能源产业的开发提供了融资，印度期待能够进口更多来自欧洲的产品，以便减低印度对中国设备的依赖，另外，印度计划斥资2000亿美元以推动国内的太阳能产业的发展，以上是印度推出的缓解对中国太阳能产品依赖的一系列措施。”</p><p>非常感谢印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授接受法广的采访。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>17/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/fb3ca3e6-fcfa-11ee-93d6-005056a97e36/w:1280/p:16x9/2000006893198.png"><p><strong></strong></p><div><p>这场降雨淹没了街道，连根拔起棕榈树，摧毁了建筑外墙。自1949年有记录以来，这个中东国家从未见过这样的降雨。在热门旅游目的地迪拜，航班被取消，交通中断，学校关闭至少一个星期。</p><p>根据机场的气象观测，周二仅12小时内就有100毫米（近4英寸）的降雨量。根据联合国的数据，这大约是迪拜全年的降雨量。</p><p>雨下得又大又快，洪水上涨，道路变成河流，有些驾驶人被迫弃车而逃。</p><p>此次降雨与穿越阿拉伯半岛并横跨阿曼湾的大型风暴系统有关。同样的系统也给附近的阿曼和伊朗东南部带来异常潮湿的天气。</p><p>阿曼国家紧急管理委员会表示，大雨引发的山洪爆发至少造成18人死亡。据阿曼国家通讯社报导，伤亡者包括学童。</p><p>阿联酋媒体和社群媒体帖文显示，暴雨对该国部分地区造成了严重破坏，包括道路倒塌和房屋被水淹没。</p><p>周二的社群媒体帖文显示，道路和停车场被洪水淹没，一些车辆完全被淹没。穿过迪拜的12车道高速公路谢赫扎耶德路（Sheikh Zayed Road）被部分淹没，导致人们陷入长达数小时的交通堵塞中。</p><p>周三，试图通过公路进入迪拜市中心的人们被困在高速公路上。由于道路堵塞，一些计程车司机拒绝载送通勤者。其中一些受困者从国外来到迪拜，参加定于下周初举行的世界区块链高峰会（World Blockchain Summit）。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgy.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E9%2598%25BF%25E8%2581%2594%25E9%2585%258B%25E9%2581%25AD%25E9%2581%2587%25E6%259C%2580%25E5%25A4%25A7%25E9%2599%258D%25E9%259B%25A8-%25E6%259C%25BA%25E5%259C%25BA%25E5%25A4%25A7%25E4%25B9%25B1-%25E5%25AD%25A6%25E6%25A0%25A1%25E5%2581%259C%25E8%25AF%25BE%25E4%25B8%2580%25E5%2591%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgy.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
