--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[卡梅伦称以色列已决定报复伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97)
+<!--1713392101000-->
+[以军宣布援助物资通过阿什杜德港进入加沙](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240417-%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99)
 ------
 
-<div>17/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/191b3272-fb13-11ee-ba96-005056bfb2b6/w:1280/p:16x9/AP24071526557302.jpg"><p><strong></strong></p><div><p>卡梅伦在访问耶路撒冷之初对记者表示：“很明显，以色列人正在决定采取行动。”“我们希望他们这样做的方式尽可能不让事态升级。”</p><p>他说，此行的主要目的是“让世界的注意力重新回到人质状况上”，并敦促哈马斯同意临时停火协议。“真正需要的是，重新关注哈马斯，重新关注人质，重新关注提供援助，重新关注加沙冲突的暂停。”</p><p>访以结束后，卡梅伦将前往意大利参加七国集团部长级会议，并在会上推动对伊朗实施制裁。同一天，德国外长贝尔伯克（Annalena Baerbock）也到访了以色列。</p><p>以色列总理办公室发表声明，指内塔尼亚胡感谢两国为挫败伊朗袭击提供前所未有的支持，但表明在遭受伊朗袭击后，以色列有权自身作出决定，采取必要措施保卫自己。</p><p>贝尔伯克说，已经向内塔尼亚胡表明，绝不能让中东陷入完全不可预测的局面，所有人都必须谨慎和负责任行事。</p><p>卡梅伦较早时就向传媒表示，以色列显然已经决定对伊朗早前发起的无人机和导弹袭击作出回应，他希望以色列尽量避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%258D%25A1%25E6%25A2%2585%25E4%25BC%25A6%25E7%25A7%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%25B7%25B2%25E5%2586%25B3%25E5%25AE%259A%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/ad8b7fa4-fbac-11ee-9429-005056a97e36/w:1280/p:16x9/2024-04-12T072218Z_257605188_RC2L37AGYJG0_RTRMADP_3_ISRAEL-PALESTINIANS-GAZA-EID-PRAYERS.JPG"><p><strong></strong></p><div><p>军方在一份声明中表示：“世界粮食计划署的八卡车面粉4月17日从阿什杜德港进入加沙地带。”军方补充说，这是“阿什杜德港获批开放以来的第一次”。</p><p>4月5日，以色列政府迫于盟友和国际组织的压力，宣布了多项措施，旨在加快向被围困、面临人道主义悲剧的加沙地带运送援助物资。这些措施包括向加沙提供的援助物资抵达阿什杜德港，因为该港靠近巴勒斯坦领土。 以色列大型港口位于加沙以北约三十公里处。</p><p>来自人道主义机构的国际援助主要通过塞得港或较小的阿里什港抵达埃及。</p><p>军方周三表示，粮食计划署的卡车“在阿什杜德港接受了彻底的安全检查，然后通过凯雷姆沙洛姆过境点进入加沙地带”。</p><p>据人道主义组织称，凯雷姆沙洛姆（Kerem Shalom）是从以色列进入加沙的少数几个陆路口岸之一，位于加沙南部边境，导致检查援助物资的旅程非常耗时。</p><p>作为4月5日宣布措施的一部分，以色列还表示，已在人道主义危机最严重的加沙地带北部开设了一个新的陆路过境点。目前，大多数卡车通过埃及和加沙边境的拉法过境点进入，该过境点位于巴勒斯坦领土的南端，被以色列和巴勒斯坦哈马斯之间的战争蹂躏了六个多月。</p><p>军方周二宣布，约 553 辆人道主义援助卡车在 48 小时内进入加沙地带，联合国认为这一数字不够。联合国巴勒斯坦难民机构（近东救济工程处）当天在一份新闻稿中强调，“进入加沙的人道主义援助数量没有发生重大变化，进入加沙北部的通道也没有改善”。</p><p>据近东救济工程处称，自 4 月初以来，平均每天有 181 辆援助卡车通过拉法和凯雷姆沙洛姆出入点进入加沙，估计这一数字“远低于两个边境哨所的业务能力和每天 500 辆卡车”。</p><p>周三，以色列总理内塔尼亚胡“驳斥了国际组织对加沙闹饥荒的指控，并确认以色列在人道主义问题上正在尽一切努力。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgo.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240417-%25E4%25BB%25A5%25E5%2586%259B%25E5%25AE%25A3%25E5%25B8%2583%25E6%258F%25B4%25E5%258A%25A9%25E7%2589%25A9%25E8%25B5%2584%25E9%2580%259A%25E8%25BF%2587%25E9%2598%25BF%25E4%25BB%2580%25E6%259D%259C%25E5%25BE%25B7%25E6%25B8%25AF%25E8%25BF%259B%25E5%2585%25A5%25E5%258A%25A0%25E6%25B2%2599&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgo.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
