--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713374103000-->
-[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
+<!--1713390302000-->
+[卡梅伦称以色列已决定报复伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97)
 ------
 
-<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/191b3272-fb13-11ee-ba96-005056bfb2b6/w:1280/p:16x9/AP24071526557302.jpg"><p><strong></strong></p><div><p>卡梅伦在访问耶路撒冷之初对记者表示：“很明显，以色列人正在决定采取行动。”“我们希望他们这样做的方式尽可能不让事态升级。”</p><p>他说，此行的主要目的是“让世界的注意力重新回到人质状况上”，并敦促哈马斯同意临时停火协议。“真正需要的是，重新关注哈马斯，重新关注人质，重新关注提供援助，重新关注加沙冲突的暂停。”</p><p>访以结束后，卡梅伦将前往意大利参加七国集团部长级会议，并在会上推动对伊朗实施制裁。同一天，德国外长贝尔伯克（Annalena Baerbock）也到访了以色列。</p><p>以色列总理办公室发表声明，指内塔尼亚胡感谢两国为挫败伊朗袭击提供前所未有的支持，但表明在遭受伊朗袭击后，以色列有权自身作出决定，采取必要措施保卫自己。</p><p>贝尔伯克说，已经向内塔尼亚胡表明，绝不能让中东陷入完全不可预测的局面，所有人都必须谨慎和负责任行事。</p><p>卡梅伦较早时就向传媒表示，以色列显然已经决定对伊朗早前发起的无人机和导弹袭击作出回应，他希望以色列尽量避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%258D%25A1%25E6%25A2%2585%25E4%25BC%25A6%25E7%25A7%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%25B7%25B2%25E5%2586%25B3%25E5%25AE%259A%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
