--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[克宫证实俄罗斯维和人员开始撤出纳卡地区](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA)
+<!--1713366902000-->
+[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
 ------
 
-<div>17/04/2024 - 15:05</div><img src="https://s.rfi.fr/media/display/e5f37434-fcb8-11ee-937d-005056a90284/w:1280/p:16x9/Capture-2196.JPG"><p><strong>据俄新社周三报导，俄总统新闻秘书佩斯科夫向记者证实，俄罗斯维和部队已开始从纳戈尔诺-卡拉巴赫地区撤出。克里姆林宫发言人说：“是的，确实如此”。前一天，阿塞拜疆媒体刊登了俄罗斯装备车队经过阿塞拜疆邻近卡拉巴赫地区的画面。        </strong></p><div><p>俄新社报导指，根据阿塞拜疆总统、亚美尼亚总理和俄罗斯总统2020年11月10日的三方声明，俄罗斯维和部队驻扎在纳戈尔诺-卡拉巴赫和拉钦走廊沿线。文件称，该维和部队由1960名军事人员组成，配备小型武器、90辆装甲运兵车、380辆汽车和特种装备。该任务将于2025年结束。</p><p>去年9月，阿塞拜疆不顾俄罗斯维和部队的存在，重新夺回了分离的纳戈尔诺-卡拉巴赫地区，此举引发了居住在那里的亚美尼亚族人的大规模外逃。此后，亚美尼亚总理帕希尼扬（Nikol Pashinyan）对该国与俄罗斯的传统联盟关系提出质疑，并开始与西方国家建立更紧密的关系。</p><p>亚美尼亚还要求俄罗斯边防人员从8月1日起离开在该国首都埃里温主要机场的岗位。阿塞拜疆APA通讯社周二晚些时候报导称，俄罗斯维和人员已开始撤离，第一批人员和装备几天前已从阿塞拜疆卡尔巴加尔（Kalbajar）区一座受亚美尼亚人敬仰的修道院中消失。APA通讯社说，阿塞拜疆警察已在该地取代了俄方人员。</p><p>根据莫斯科斡旋达成的协议，俄罗斯维和部队于2020年11月部署到卡拉巴赫，该协议制止了阿塞拜疆部队与亚美尼亚部队之间长达六周的战斗。俄国防部表示，当时部署了近2000名军人、90辆装甲运兵车、380辆汽车和其他装备。该部署使莫斯科在这一具有重要战略意义的南高加索地区获得了重要的立足点。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcU.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E5%2585%258B%25E5%25AE%25AB%25E8%25AF%2581%25E5%25AE%259E%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25BB%25B4%25E5%2592%258C%25E4%25BA%25BA%25E5%2591%2598%25E5%25BC%2580%25E5%25A7%258B%25E6%2592%25A4%25E5%2587%25BA%25E7%25BA%25B3%25E5%258D%25A1%25E5%259C%25B0%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcU.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
