--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713363301000-->
-[日本首度出动两艘“准航舰”远征印太 或向中国秀肌肉](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98-%E5%87%86%E8%88%AA%E8%88%B0-%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA-%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89)
+<!--1713366902000-->
+[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
 ------
 
-<div>17/04/2024 - 15:51</div><img src="https://s.rfi.fr/media/display/a2524902-132f-11ea-a55b-005056a99247/w:1280/p:16x9/000_hkg10167682_0.jpg"><p><strong>日本海上自卫队17日宣布，出云号（JS Izumo DDH-183）和加贺号（JS Kaga DDH-184）两艘出云级直升机护卫舰将在5月3日启航，率领6艘水面舰艇、2架P-1海上巡逻机和数艘潜舰分4个战斗编队，展开为期7个月的“2024年印太远征”（IPD24），这是日本海自有史以来规模最大的单次远征部署。        </strong></p><div><p>据自由时报引述美国海军研究协会新闻（USNI News）17日消息，IPD24行动旨在实现“自由开放的印太地区”，突显了日本对区域安全的关切，以及与盟友合作的决心。出云级护卫舰的参与彰显了日本在印太地区的存在和影响力，以及其积极参与维护区域安全的承诺。</p><p>这次远征是日本首次同步部署两艘出云级护卫舰，反映日本意图加强在区域内的存在感。其中，加贺号已于3月完成首阶段改装，能够在甲板上起降F-35B战机，这将大幅提升日本的攻击及防御能力，出云号预计稍后进行类似改装。</p><p>远征期间，日本舰队将分赴澳洲、斐济、法属玻里尼西亚、印度、基里巴斯、帕劳、巴布亚新几内亚、菲律宾、马绍尔群岛、密克罗尼西亚、东加、美国和万纳杜等地，参与包括“马拉拉”（Marara ）、“环太平洋”（RIMPAC）、“太平洋之龙”（Pacific Dragon）、“太平洋先锋”（Pacific Vanguard）、“卡卡杜”（ Kakadu）、“太平洋伙伴”（Pacific Partnership）以及“马拉巴尔”（Malabar）等一系列联合演习，目标是增进与区内盟友的联合作战能力。</p><p>该报道称，与此同时，加拿大14日启动代号“地平线行动”（Operation Horizon）的印太任务，派遣护卫舰蒙特娄号 （HMCS Montreal FFH336） 执行为期6个月的任务；美国罗斯福号航空母舰打击群 （Theodore Roosevelt CSG）结束与韩国及日本海卫在东海的联合演习后，又于11日12日周六期间，与日本海自舰艇在东海南部进行双边演习。</p><p>自由时报称，另据德国军方透露，美海军卡尔文森号（USS Carl Vinson CVN-70）航舰打打击群将参加今夏在夏威夷附近举行的“环太平洋”演习，德国也将出动3架战机和1架运输机与之合作，舰载机将演练保护航舰免受敌机威胁，并模拟对敌军雷达阵地实施打击行动。</p><p>消息引述军事专家分析，日本此次大规模远征部署，旨在向国际社会传达维护自由开放航行的决心，并透过与美德等盟友的联合演训，增强共同威慑和因应区域安全威胁的能力，反制中俄在印太地区日益扩张的影响力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E5%25BA%25A6%25E5%2587%25BA%25E5%258A%25A8%25E4%25B8%25A4%25E8%2589%2598-%25E5%2587%2586%25E8%2588%25AA%25E8%2588%25B0-%25E8%25BF%259C%25E5%25BE%2581%25E5%258D%25B0%25E5%25A4%25AA-%25E6%2588%2596%25E5%2590%2591%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2580%25E8%2582%258C%25E8%2582%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
